# Tank

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py
app/: constants.py
app/domain/: conform_paths.py  errors.py  tank.py  template.py  template_keys.py  templates.py
app/from_tank/: contants_import.py  pipiconfiguration_import.py  six_import.py  template_import.py  template_key_import.py  template_path_parser_import.py  yaml_cache.py
app/old/: old_template.py  old_templates.py
config/: template - Copie.yml  template.yml  templates.yml
cpp/: CMakeLists.txt  CMakeLists_py39.txt  CMakeLists_saved.txt  CMakeLists_saved2.txt  cpp.vcxproj  cpp.vcxproj.filters  main.cpp  template_keys.cpp  template_keys.h  template_obj.cpp  template_obj.h  templates_obj.cpp  templates_obj.h  utils.cpp
cpp/_build/: ALL_BUILD.vcxproj  CMakeCache.txt  TankLib.vcxproj  TankLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tank.sln  tank_exec.vcxproj  tank_exec.vcxproj.filters  tank_module.vcxproj  tank_module.vcxproj.filters
cpp/_build/Release/: TankLib.lib  tank_module.cp37-win_amd64.pyd  tank_module.exp
cpp/_build/TankLib.dir/Release/: TankLib.dll.recipe
cpp/_build/TankLib.dir/Release/TankLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  TankLib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/_build/libraries/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  pybind11.sln
cpp/_build/pybind11/: ALL_BUILD.vcxproj
cpp/_build/tank_module.dir/Release/: tank_module.cp37-win_amd64.pyd.recipe
cpp/_build/tank_module.dir/Release/tank_module.tlog/: CL.10280.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tank_module.write.1u.tlog
cpp/_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp/_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
cpp/_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp/_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cpp/bin - Copie/: tank_module.cp37-win_amd64.pyd
cpp/bin3.9/: TankLib.exp  tank_module.cp39-win_amd64.pyd
cpp/bin37/: tank_module.cp37-win_amd64.pyd
cpp/bin39/: TankLib.exp  TankLib.lib  tank_module.cp39-win_amd64.pyd  tank_module.exp  tank_module.lib
cpp/bin_save/: tank_module.cp37-win_amd64.pyd
cpp/build - Copie/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  TankLib.vcxproj  TankLib.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake  tank_module.vcxproj
cpp/build - Copie/Debug/: tank_module.exp
cpp/build - Copie/TankLib.dir/Debug/: TankLib.lib.recipe
cpp/build - Copie/TankLib.dir/Debug/TankLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  TankLib.lastbuildstate
cpp/build - Copie/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pybind11.sln
cpp/build - Copie/tank_module.dir/Debug/: tank_module.cp39-win_amd64.pyd.recipe
cpp/build - Copie/tank_module.dir/Debug/tank_module.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  tank_module.write.1u.tlog
cpp/build - Copie/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cpp/lib/: TankLib.lib  tank_module.cp39-win_amd64.pyd
cpp/lib/Debug/: tank_module.cp39-win_amd64.pyd
cpp/old/: binder.cpp  conform_path.cpp  main.cpp  tank_obj.cpp  tank_obj.h  templates_obj.cpp  templates_obj.h  test.cpp
cpp/src/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Makefile  TankLib.vcxproj  TankLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _main_tank.h  binder.cpp  binder.i  binder.py  binder_wrap.cxx  cmake_install.cmake  conform_path.cpp  conform_path.h  exception.cpp  exception.h  main.cpp  main_tank.cpp  setup.py  tank.cpp  tank.h  tank.sln  tank_module.vcxproj  tank_module.vcxproj.filters  tank_obj.cpp  tank_obj.h  template_keys.cpp  template_keys.h  template_obj.cpp  template_obj.h  templates.py  templates_obj.cpp  templates_obj.h  templates_wrap.cxx  utils.cpp  utils.h
cpp/src/Release/: tank_module.cp39-win_amd64.pyd  tank_module.exp
cpp/src/TankLib.dir/Release/: TankLib.dll.recipe
cpp/src/TankLib.dir/Release/TankLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  TankLib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/src/libraries/pybind11/: ALL_BUILD.vcxproj  cmake_install.cmake  pybind11.sln
cpp/src/tank_module.dir/Release/: tank_module.cp39-win_amd64.pyd.recipe
cpp/src/tank_module.dir/Release/tank_module.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tank_module.lastbuildstate  tank_module.write.1u.tlog
cpp/src/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp/src/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
cpp/src/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp/src/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cpp/x64/Debug/: cpp.exe.recipe  cpp.ilk  cpp.vcxproj.FileListAbsolute.txt  main.nativecodeanalysis.sarif  main.obj.enc  template_keys.obj.enc  template_obj.new.obj.enc  vc143.idb
cpp/x64/Debug/cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/: CMakeLists.txt
prototype/domain/: config.py  template.py  templates.py
python/api/: __init__.py
src/: CMakeLists.txt  boost_x64_release.props  config_parser.cpp  cpp.aps  cpp.sln  cpp.vcxproj  cpp.vcxproj.filters  main.cpp  resource.h  tank.cpp  tank.h  template_keys.h  template_obj.cpp  template_obj.h  templates_obj.cpp  templates_obj.h  utils.cpp  utils.h
tests/: run_tests.py  test_tank.py  test_template.py  tests_templates.py
(+20 files in other folders)
