# find_package(RapidJSON)
#
# add_subdirectory(adapters)
# add_subdirectory(domain)
#
# target_include_directories(Dto INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
# target_include_directories(Domain PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
# target_include_directories(Interfaces INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
# target_include_directories(Adapters PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")